--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,6 +1,12 @@
   ja:
     enums:
       order:
-        payment_method:
+        payment:
           credit_card: "クレジットカード"
           transfer: "銀行振込"
+        order_status:
+          waiting: "入金待ち"
+          paid_up: "入金確認"
+          production: "制作中"
+          preparing: "発送準備中"
+          shipped: "発送済み"
