--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -10,3 +10,8 @@
           production: "制作中"
           preparing: "発送準備中"
           shipped: "発送済み"
+        make_status: 
+          impossible: "製作不可"
+          waitingproduction: "製作待ち"
+          production: "制作中"
+          complete: "製作完了"
